--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset=utf-8 />
     <title>11_css_basic_selectors</title>
-    <!-- link for style.css -->
+    <link rel="stylesheet" href="css/style.css">
     <link
         rel="stylesheet"
         href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"
